--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,20 @@
   "description": "Name-off backend",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node Server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ramki Pitchala & Rohan Shiva",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.16",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
