--- a/server/package.json
+++ b/server/package.json
@@ -2,22 +2,25 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Name-off backend",
-  "main": "index.js",
+  "main": "Server.ts",
   "scripts": {
-    "start": "ts-node Server.ts",
+    "start": "nodemon Server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ramki Pitchala & Rohan Shiva",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.16",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.16",
+    "@types/pg": "^7.14.7",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "pg": "^8.5.1"
   }
 }
