--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Name-off backend",
-  "main": "Server.ts",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon Server.ts",
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ramki Pitchala & Rohan Shiva",
@@ -18,9 +18,13 @@
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
+    "@types/socket.io": "^2.1.12",
+    "@types/socket.io-client": "^1.4.35",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.1.0"
   }
 }
