Lobby Service and Lobby Screen

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -31,6 +31,7 @@
 /build/
 
 # Web related
+ApiConfig.dart
 lib/generated_plugin_registrant.dart
 
 # Symbolication related
@@ -41,3 +42,5 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+
